--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="nl">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" <meta name="google-site-verification" content="BGEaTGoo6QfvMyAMBbsQ2q6fL8eSJuma8a3GPQ4Xp2A" />content="width=device-width, initial-scale=1.0">
     <title>Vliegtuig Ontwijk Spel</title>
     <style>
         /* CSS voor de styling van het spel */
