Fix meta tags in index.html
Fixed the viewport meta tag and corrected the title tag.

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="nl">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" <meta name="google-site-verification" content="BGEaTGoo6QfvMyAMBbsQ2q6fL8eSJuma8a3GPQ4Xp2A" /> <meta name=
-    <title>Vliegtuig Ontwijk Spel</title>
+    <meta name="viewport"
+    <meta name=<title>Vliegtuig Ontwijk Spel</title>
     <style>
         /* CSS voor de styling van het spel */
         body {
